--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -23,7 +23,11 @@
           <div class="row">
             <div class="col-lg-8">
               Blocks
-              </div>
+              <div style="overflow:hidden">
+                <iframe src="http://wooflo.com/project/561e240139b3b600344aef79" width="100%" height="600px">
+                  Ваш браузер не поддерживает плавающие фреймы!
+                </iframe></div>
+            </div>
             <div class="col-lg-4">
               {% include 'comments/comment_form_block.html' with not_collapse="1" %}
             </div>
