--- a/templates/comments/comment_form_block.html
+++ b/templates/comments/comment_form_block.html
@@ -21,7 +21,7 @@
   <div class="box-footer">
     <form action="{% url 'comment:comment' lab_pk=lab.pk %}" method="post" id="comment-form" class="comment-form">
       <div class="comment-input">
-        <img class="img-responsive img-circle img-sm " src="{% static 'img/gravatar.png' %}" alt="alt text">
+        <img class="img-responsive img-circle img-sm " src="{% static 'img/gravatar2.png' %}" alt="alt text">
         <!-- .img-push is used to add margin to elements next to floating images -->
         <div class="img-push">
           <input type="text" class="form-control input-sm " placeholder="Press enter to post comment">
