--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content_header %}{{ object }}{% endblock %}
-
+{% block page_header %}{% endblock %}
 {% block content %}
 
 <div class="row">
