--- a/templates/comments/comment_form_block.html
+++ b/templates/comments/comment_form_block.html
@@ -11,7 +11,7 @@
   <div class="box-body">
 
   </div><!-- /.box-body -->
-  <div class="box-footer box-comments comments-block">
+  <div class="box-footer box-comments comments-block comment-activities">
     {% for comment in comments %}
       {% include 'comments/comment_block.html' %}
     {% endfor %}
