--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -23,7 +23,7 @@
           <div class="row">
             <div class="col-lg-8">
               <div style="overflow:hidden">
-                <iframe src="http://wooflo.com/project/561e240139b3b600344aef79" width="100%" height="600px">
+                <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="600px">
                   Ваш браузер не поддерживает плавающие фреймы!
                 </iframe></div>
             </div>
