--- a/templates/units/tabs/link.html
+++ b/templates/units/tabs/link.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load static i18n %}
 
 <div class="box box-widget">
   <div class="box-header">
@@ -9,11 +9,14 @@
   </div>
   <div class="box-body">
     <div class="attachment-block clearfix">
-      <img class="attachment-img" src="{{ link.image }}" alt="attachment image">
-
+      {% if link.image %}
+        <img class="attachment-img" src="{{ link.image }}" alt="attachment image">
+      {% else %}
+        <img class="attachment-img" src="{% static 'img/no_image.png' %}" alt="attachment image">
+      {% endif %}
       <div class="attachment-pushed">
-        <h4 class="attachment-heading"><a href="{{ link.url }}">{{ link.title  }}</a></h4>
-        <div class="attachment-text">{{ link.description|safe }}
+        <h4 class="attachment-heading"><a href="{{ link.link }}">{% if link.title %}{{ link.title }}{% else %}{{ link.link }}{% endif %}</a></h4>
+        <div class="attachment-text">{% if link.title %}{{ link.description|safe }}{% else %} ...{% endif %}
         </div>
       </div>
     </div>
