--- a/templates/comments/comment_form_block.html
+++ b/templates/comments/comment_form_block.html
@@ -1,6 +1,6 @@
 {% load i18n static bootstrap_tags %}
 
-<div class="box box-widget">
+<div class="box box-widget chat-box" data-experiment-pk="{{ object.pk }}">
   <div class="box-header with-border">
     <h3 class="box-title">{% trans 'Comments' %}</h3>
     <div class="box-tools">
