--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -365,6 +365,7 @@
   <script src="{% static 'jstree/jstree.js' %}"></script>
   <script src="{% static 'js/tree.js' %}"></script>
   <script src="{% static 'js/plot.js' %}"></script>
+  <script src="{% static 'js/chat.js' %}"></script>
   <script src="{% static 'lightbox/js/lightbox.min.js' %}"></script>
 
   <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="mw4uj2q482bd8w0"></script>
