--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -13,22 +13,28 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="nav-tabs-custom">
-      <ul class="nav nav-tabs">
-        <li class="active"><a href="#exp-discussion" data-toggle="tab"><i class="fa fa-edit"></i> {% trans 'Discussion' %}</a></li>
-        <li class=""><a href="#unit-page" data-toggle="tab"><i class="fa fa-cube"></i> {% trans 'Units' %}</a></li>
-        <li class=""><a href="#exp-page" data-toggle="tab"><i class="fa fa-eyedropper"></i> {% trans 'Details' %}</a></li>
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="active"><a href="#exp-chat" role="tab" data-toggle="tab"><i class="fa fa-comments"></i> {% trans 'Discussion' %}</a></li>
+        <li class=""><a href="#exp-workfow" data-target="#exp-workfow" role="tab" data-toggle="tab"><i class="fa fa-edit"></i> {% trans 'Workflow' %}</a></li>
+        <li class=""><a href="#unit-page" data-target="#unit-page" role="tab" data-toggle="tab"><i class="fa fa-cube"></i> {% trans 'Data' %}</a></li>
+        <li class=""><a href="#exp-page" data-target="#exp-page" role="tab" data-toggle="tab"><i class="fa fa-eyedropper"></i> {% trans 'Details' %}</a></li>
       </ul>
+      <!--</div>-->
       <div class="tab-content">
-        <div class="tab-pane active" id="exp-discussion">
+        <div class="tab-pane active" id="exp-chat">
           <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-12">
+              {% include 'comments/comment_form_block.html' with not_collapse="1" %}
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane" id="exp-workfow">
+          <div class="row">
+            <div class="col-lg-12">
               <div style="overflow:hidden">
                 <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="600px">
                   Ваш браузер не поддерживает плавающие фреймы!
                 </iframe></div>
-            </div>
-            <div class="col-lg-4">
-              {% include 'comments/comment_form_block.html' with not_collapse="1" %}
             </div>
           </div>
         </div>
@@ -394,6 +400,19 @@
 
     $(function() {
       InitJSTree(treeElement,['search', 'checkbox']);
+
+      // fix bootstrap tabs urls
+      var hash = window.location.hash;
+      hash = hash.substr(0, 2) == '#/' ? '#' + hash.substr(2) :  hash;
+      hash && $('ul.nav a[href="' + hash + '"]').tab('show');
+
+      $('.nav-tabs a').click(function (e) {
+        $(this).tab('show');
+        var scrollmem = $('body').scrollTop();
+        window.location.hash = this.hash;
+        $('html,body').scrollTop(scrollmem);
+      });
+
     });
 
     // fix handsontable bug with tabs
@@ -401,17 +420,6 @@
       if ($('#unit-measurements .btn').is(':visible')) {
         $('#dataTable').handsontable('render');
       }
-    });
-
-    // fix bootstrap tabs urls
-    var hash = window.location.hash;
-    hash && $('ul.nav a[href="' + hash + '"]').tab('show');
-
-    $('.nav-tabs a').click(function (e) {
-      $(this).tab('show');
-      var scrollmem = $('body').scrollTop();
-      window.location.hash = this.hash;
-      $('html,body').scrollTop(scrollmem);
     });
 
     function update_unit_info(unit){
