New html. Set height.

--- a/apps/common/static/css/styles.css
+++ b/apps/common/static/css/styles.css
@@ -303,11 +303,16 @@ span.has-error {
         margin: 7px 10px;
     }
 }
-.comment-activities.comments-block {
-    max-height: 600px;
-}
 
 .comment-block .comment-text img {
     width: 100% !important;
     height: 100% !important;
+}
+
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+  overflow-y: auto;
 }
