--- a/templates/comments/comment_form_block.html
+++ b/templates/comments/comment_form_block.html
@@ -1,5 +1,5 @@
 {% load i18n static bootstrap_tags %}
-
+<div class="comment-area">
 <div class="box box-widget chat-box" data-experiment-pk="{{ object.pk }}">
   <!--<div class="box-header with-border">-->
     <!--<h3 class="box-title">{% trans 'Comments' %}</h3>-->
@@ -11,7 +11,7 @@
   <div class="box-body">
 
   </div><!-- /.box-body -->
-  <div class="box-footer box-comments comments-block comment-activities">
+  <div class="box-footer box-comments comments-block {% if not_sockets %}comments-list{% endif %} comment-activities">
     {% for comment in comments %}
       {% include 'comments/comment_block.html' %}
     {% endfor %}
@@ -46,6 +46,8 @@
 {% if not not_modal %}
   {% block modal %}
     {% load static i18n %}
-    {% include 'modal.html' with modal_id=modal_id|default:'comment-modal' action="" extra_form=comment_form_update modal_title='update  comment' class="comment-modal"%}
+    {% include 'modal.html' with modal_id=modal_id|default:'comment-modal' action="" extra_form=comment_form_update modal_title='update  comment' modal_class="comment-modal" %}
   {% endblock %}
 {% endif %}
+
+</div>
