--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -305,8 +305,11 @@ span.has-error {
 }
 
 .comment-block .comment-text img {
-    width: 100% !important;
-    height: 100% !important;
+    width: inherit !important;
+    height: inherit !important;
+
+    max-width: 100% !important;
+    max-height: 100% !important;
 }
 
 html {
@@ -315,4 +318,8 @@ html {
 body {
   height: 100%;
   overflow-y: auto;
+}
+
+.nav-tabs-custom.unit-tabs > .nav-tabs > li {
+    margin-right: 1px;
 }
