Fix file upload in Firefox

--- a/templates/uploader/uploader.html
+++ b/templates/uploader/uploader.html
@@ -34,14 +34,14 @@
         <div class="row fileupload-buttonbar">
                                     <div class="col-lg-7">
                                         <div class="btn-group">
-                                          <button type="button" class="btn btn-info bg-olive btn-flat fileinput-button"><i class="glyphicon glyphicon-plus"></i>
+                                          <span class="btn btn-info bg-olive btn-flat fileinput-button"><i class="glyphicon glyphicon-plus"></i>
                                             <span>{% trans "Upload"%}</span>
                                              {% if max_files > 1 %}
                                                 <input type="file" name="expirience_files">
                                             {% else %}
                                                 <input type="file" name="expirience_files" multiple>
                                             {% endif %}
-                                          </button>
+                                          </span>
 
                                           <button type="button" class="btn btn-info bg-olive btn-flat dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <span class="caret"></span>
