--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -66,10 +66,6 @@ body {
     overflow-y: auto;
 }
 
-.comment-activities {
-    max-height: 200px;
-}
-
 .container-xs-height {
     height: 100px;
 }
@@ -304,13 +300,7 @@ span.has-error {
     }
 }
 
-.comment-block .comment-text img {
-    width: inherit !important;
-    height: inherit !important;
 
-    max-width: 100% !important;
-    max-height: 100% !important;
-}
 
 html {
   height: 100%;
@@ -322,4 +312,16 @@ body {
 
 .nav-tabs-custom.unit-tabs > .nav-tabs > li {
     margin-right: 1px;
+}
+.nav-tabs-custom.no-bottom-margin{
+    margin-bottom: 0;
+}
+.content{
+    padding-bottom: 0;
+}
+.comment-form-a {
+    padding-top: 20px;
+}
+.comments-list{
+    max-height: 400px;
 }
