--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <div class="nav-tabs-custom">
+    <div class="nav-tabs-custom no-bottom-margin">
       <ul class="nav nav-tabs exp-nav" role="tablist">
         <li class="active"><a href="#exp-chat" role="tab" data-toggle="tab"><i class="fa fa-comments"></i> {% trans 'Discussion' %}</a></li>
         <li class=""><a href="#exp-workfow" data-target="#exp-workfow" role="tab" data-toggle="tab"><i class="fa fa-edit"></i> {% trans 'Workflow' %}</a></li>
@@ -32,7 +32,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div style="overflow:hidden">
-                <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="600px">
+                <iframe src="http://wooflo.magic60.ru/project/{{ object.wooflo_key}}" width="100%" height="100%">
                   Ваш браузер не поддерживает плавающие фреймы!
                 </iframe></div>
             </div>
@@ -404,7 +404,14 @@
       InitJSTree(treeElement,['search', 'checkbox']);
 
       // set height of comment block
-      $('.comment-activities').css('max-height', window.innerHeight / 3)
+      $('.comment-activities').css('max-height', window.innerHeight -430)
+      if (window.innerHeight > 650) {
+        $('.comment-activities').not('.comments-list').css('max-height', $('.main-sidebar').height() - 395)
+      }
+      $('#exp-workfow iframe').css('min-height', $('.main-sidebar').height() -100)
+      setTimeout( function() {
+            comments_scroll_to_end()
+       }, 500);
 
       // fix bootstrap tabs urls
       var hash = window.location.hash;
