--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -362,6 +362,7 @@
   <script src="{% static 'js/font-awesome-unicode-map.js' %}"></script>
   <script src="{% static 'js/recent.js' %}"></script>
   <script src="{% static 'js/d3.v3.min.js' %}"></script>
+  <script src="{% static 'js/cola.min.js' %}"></script>
   <script src="{% static 'js/graph.js' %}"></script>
 
   <script src="{% static 'jquery-handsontable/jquery.handsontable.full.js' %}"></script>
