--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -165,18 +165,14 @@
                   <li class="">
                     <a href="#units-list" data-toggle="tab"><i class="fa fa-list"></i> {% trans 'List' %}</a>
                   </li>
-                    <a class="pull-right create-unit" style="color: #444;" data-url="{% url 'units:create' lab.pk %}" href="#"><i class="fa fa-plus"></i> {% trans "Create Unit" %}</a>
-                    <a class="pull-right" style="padding-right:10px; color: #444;" data-toggle="modal" data-target="#add_unit" href="#"><i class="fa fa-plus"></i> {% trans "Add Unit" %}</a>
-                    {% include "units/unit_add_modal.html" %}
+                  <li class="pull-right" ><a class="create-unit" data-url="{% url 'units:create' lab.pk %}" href="#"><i class="fa fa-plus"></i> {% trans "Create Unit" %}</a></li>
+                  <li class="pull-right" style="margin-right: -20px;"><a data-toggle="modal" data-target="#add_unit" href="#"><i class="fa fa-plus"></i> {% trans "Add Unit" %}</a></li>
+                  {% include "units/unit_add_modal.html" %}
                 </ul>
 
                 <div class="tab-content">
                   <div class="tab-pane active" id="units-graph">
                     <!--<a href="{% url 'units:create' lab.pk %}" class="btn btn-primary">Add Unit</a>-->
-                    <a class="btn btn-info btn-sm btn-flat"
-                     data-toggle="modal" data-target="#add_unit" href="#">
-                    <i class="fa fa-plus"></i> Add Unit</a>
-
                     <div class="graph-area"></div>
                   </div>
                   <!-- /.tab-pane -->
