--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
   {% if user.is_authenticated %}
     <div class="user-panel">
       <div class="image pull-left">
-        <img src="{% static 'ava_placeholder.png' %}" class="img-circle" alt="User Image">
+        <img src="{% static 'img/ava_placeholder.png' %}" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
         <p>{{ user.full_name }}</p>
