--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   {% block head %}
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <link href="{% static 'vendors.css' %}" rel="stylesheet">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'styles.css' %}" rel="stylesheet">
   {% endblock %}
   {% block css %}{% endblock %}
 
@@ -146,9 +146,7 @@
 
 
   <script src="{% static 'vendors.js' %}" type="text/javascript"></script>
-  <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
-  <script src="{% static 'js/forms.js' %}"></script>
-  <script type="text/javascript" src="{% static 'js/datetimepicker.js' %}"></script>
+  <script src="{% static 'app.js' %}" type="text/javascript"></script>
   <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
 
   {% block script %}
