--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -254,7 +254,7 @@
                     </div>
                     <div class="top voffset2">
                       <div class="wrap-handsontable">
-                        <div id="dataTable" data-content='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
+                        <div id="dataTableEditable" data-content='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
                              data-title='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
                              data-column='[[&quot;&quot;, &quot;&quot;], [&quot;&quot;, &quot;&quot;]]'
                              data-url=''
@@ -349,15 +349,8 @@
   {% include 'filemanager/angular/modal_scripts.html' %}
   {% include 'uploader/scripts.html' %}
 
-  <script src="{% static 'js/font-awesome-unicode-map.js' %}"></script>
-  <script src="{% static 'js/recent.js' %}"></script>
-  <script src="{% static 'js/graph.js' %}"></script>
 
   {% block extra_script %}{% endblock %}
-  <script src="{% static 'js/handson-table-new.js' %}"></script>
-  <script src="{% static 'js/tree.js' %}"></script>
-  <script src="{% static 'js/plot.js' %}"></script>
-  <script src="{% static 'js/chat.js' %}"></script>
 
   <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="mw4uj2q482bd8w0"></script>
 
@@ -413,7 +406,7 @@
     // fix handsontable bug with tabs
     $('a[href="#unit-measurements"]').on('shown.bs.tab', function (e) {
       if ($('#unit-measurements .btn').is(':visible')) {
-        $('#dataTable').handsontable('render');
+        $('#dataTableEditable').handsontable('render');
       }
     });
 
@@ -477,7 +470,7 @@
         addSelect2();
 
         // measurements
-        var table = $("#dataTable");
+        var table = $("#dataTableEditable");
         var table_data = JSON.parse(data.measurements);
         var save_url = '/{{ lab.pk }}/measurements/'+ unit.id + '/create/'
         table.data('url', save_url)
@@ -529,7 +522,7 @@
     $('body').on('click',' .revert-revision', function (e) {
         var url = $(this).data('url');
         $.post(url, function (data) {
-            var table = $("#dataTable");
+            var table = $("#dataTableEditable");
             var table_data = data.table_data;
             table_data.unshift(data.headers);
             table.handsontable('loadData', table_data);
