--- a/templates/handsontable_dynamic.html
+++ b/templates/handsontable_dynamic.html
@@ -49,7 +49,7 @@
 {% block content %}
   <div class="col-lg-12">
     <div class="wrap-handsontable">
-      <div id="dataTable" data-content='{{ data }}' data-title='{{ title }}' data-column='{{ column }}'
+      <div id="dataTableEditable" data-content='{{ data }}' data-title='{{ title }}' data-column='{{ column }}'
            data-headers='{{ headers }}' {% block urls %}{% endblock %}></div>
     </div>
   </div>
@@ -63,5 +63,4 @@
 
 {% block script %}
   {% block extra_script %}{% endblock %}
-  <script src="{% static 'js/handson-table-new.js' %}"></script>
 {% endblock %}
