Fix measurements. Move js to js files

--- a/templates/measurement/measurement_list.html
+++ b/templates/measurement/measurement_list.html
@@ -27,3 +27,7 @@
 {% block content_header %}
   {% trans 'measurements'|title %}
 {% endblock %}
+
+{% block extra_script %}
+  <script src="{% static 'ckeditor/ckeditor.js' %}"></script>
+{% endblock %}
